--- a/ruli/index.html
+++ b/ruli/index.html
@@ -25,9 +25,9 @@
     <div class="sub-menu-container">
         <div class="sub-menu">
             <div class="menu-buttons">
-                <button>Kirim</button>
-                <button>Minta</button>
-                <button>Kontak</button>
+                <button class="send-btn">Kirim</button>
+                <button class="ask-btn">Minta</button>
+                <button class="contact-btn">Kontak</button>
             </div>
             <button class="transfer-history">Riwayat Transfer</button>
         </div>
@@ -88,7 +88,7 @@
         </div>
 
         <div class="action-buttons">
-            <button class="next-btn">Berikutnya</button>
+            <button class="next-btn" disabled>Berikutnya</button>
             <button class="add-btn">Tambah Nomor Tujuan</button>
         </div>
     </main>
